gVisor support and fusemount outside of container closes #3, closes #4 adds slightly smarter worker choosing algorithm

--- a/deploy/yaml/lb-internal-service.yml.j2
+++ b/deploy/yaml/lb-internal-service.yml.j2
@@ -1,15 +1,15 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: codebox-lb-internal-${LB_NUM}
+  name: codebox-lb-internal-{{ LB_NUM }}
   annotations:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 spec:
   type: ClusterIP
   clusterIP: None
   selector:
-    name: codebox-lb-${LB_NUM}
-    buildtime: ${BUILDTIME}
+    name: codebox-lb-{{ LB_NUM }}
+    buildtime: {{ BUILDTIME }}
   ports:
     - name: grpc
       protocol: TCP
