--- a/deploy/yaml/broker-deployment.yml.j2
+++ b/deploy/yaml/broker-deployment.yml.j2
@@ -1,70 +1,56 @@
 kind: Deployment
 apiVersion: apps/v1beta1
 metadata:
-  name: codebox-lb-${LB_NUM}
+  name: codebox-broker
   labels:
     app: codebox
-    type: lb
+    type: broker
 spec:
-  replicas: 1
+  replicas: {{ REPLICAS }}
   selector:
     matchLabels:
-      name: codebox-lb-${LB_NUM}
       app: codebox
-      type: lb
+      type: broker
 
   template:
     metadata:
       labels:
-        buildtime: ${BUILDTIME}
-        name: codebox-lb-${LB_NUM}
+        buildtime: {{ BUILDTIME }}
         app: codebox
-        type: lb
+        type: broker
     spec:
       terminationGracePeriodSeconds: 360
       imagePullSecrets:
         - name: syncano-k8s-pull-secret
-      volumes:
-        - name: script-storage
-          hostPath:
-            path: /tmp/codebox
       containers:
-        - name: codebox-lb-${LB_NUM}
-          image: ${DOCKERIMAGE}:${VERSION}
+        - name: codebox-broker
+          image: {{ DOCKERIMAGE }}:{{ VERSION }}
           command:
             - "codebox"
-            - "lb"
-          securityContext:
-            runAsUser: 0
+            - "broker"
           resources:
             requests:
               memory: "500Mi"
-              cpu: 1
+              cpu: 0.5
           ports:
+            - name: uwsgi
+              containerPort: 8080
             - name: grpc
               containerPort: 9000
             - name: http-metrics
               containerPort: 9080
           env:
             - name: SERVICE_NAME
-              value: codebox-lb
-            - name: SCALING_DEPLOYMENT
-              value: codebox-worker-${LB_NUM}
+              value: codebox-broker
+            - name: LB_ADDRS
+              value: {{ LB_ADDRS }}
           envFrom:
             - configMapRef:
                 name: codebox
             - secretRef:
                 name: codebox
-          volumeMounts:
-            - mountPath: /home/codebox/storage
-              name: script-storage
           livenessProbe:
             httpGet:
               path: /health
-              port: 9080
-            initialDelaySeconds: 5
-          readinessProbe:
-            httpGet:
-              path: /ready
               port: 9080
             initialDelaySeconds: 5
