--- a/deploy/yaml/broker-hpa.yml.j2
+++ b/deploy/yaml/broker-hpa.yml.j2
@@ -3,8 +3,8 @@ apiVersion: autoscaling/v1
 metadata:
   name: codebox-broker
 spec:
-  minReplicas: ${BROKER_MIN}
-  maxReplicas: ${BROKER_MAX}
+  minReplicas: {{ BROKER_MIN }}
+  maxReplicas: {{ BROKER_MAX }}
   scaleTargetRef:
     apiVersion: extensions/v1beta1
     kind: Deployment
