--- a/deploy/yaml/lb-deployment.yml.j2
+++ b/deploy/yaml/lb-deployment.yml.j2
@@ -1,56 +1,70 @@
 kind: Deployment
 apiVersion: apps/v1beta1
 metadata:
-  name: codebox-broker
+  name: codebox-lb-{{ LB_NUM }}
   labels:
     app: codebox
-    type: broker
+    type: lb
 spec:
-  replicas: ${REPLICAS}
+  replicas: 1
   selector:
     matchLabels:
+      name: codebox-lb-{{ LB_NUM }}
       app: codebox
-      type: broker
+      type: lb
 
   template:
     metadata:
       labels:
-        buildtime: ${BUILDTIME}
+        buildtime: {{ BUILDTIME }}
+        name: codebox-lb-{{ LB_NUM }}
         app: codebox
-        type: broker
+        type: lb
     spec:
       terminationGracePeriodSeconds: 360
       imagePullSecrets:
         - name: syncano-k8s-pull-secret
+      volumes:
+        - name: script-storage
+          hostPath:
+            path: /tmp/codebox
       containers:
-        - name: codebox-broker
-          image: ${DOCKERIMAGE}:${VERSION}
+        - name: codebox-lb-{{ LB_NUM }}
+          image: {{ DOCKERIMAGE }}:{{ VERSION }}
           command:
             - "codebox"
-            - "broker"
+            - "lb"
+          securityContext:
+            runAsUser: 0
           resources:
             requests:
               memory: "500Mi"
-              cpu: 0.5
+              cpu: 1
           ports:
-            - name: uwsgi
-              containerPort: 8080
             - name: grpc
               containerPort: 9000
             - name: http-metrics
               containerPort: 9080
           env:
             - name: SERVICE_NAME
-              value: codebox-broker
-            - name: LB_ADDRS
-              value: ${LB_ADDRS}
+              value: codebox-lb
+            - name: SCALING_DEPLOYMENT
+              value: codebox-worker-{{ LB_NUM }}
           envFrom:
             - configMapRef:
                 name: codebox
             - secretRef:
                 name: codebox
+          volumeMounts:
+            - mountPath: /home/codebox/storage
+              name: script-storage
           livenessProbe:
             httpGet:
               path: /health
+              port: 9080
+            initialDelaySeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /ready
               port: 9080
             initialDelaySeconds: 5
