--- a/deploy/yaml/worker-deployment.yml.j2
+++ b/deploy/yaml/worker-deployment.yml.j2
@@ -1,15 +1,15 @@
 kind: Deployment
 apiVersion: apps/v1beta1
 metadata:
-  name: codebox-worker-${LB_NUM}
+  name: codebox-worker-{{ LB_NUM }}
   labels:
     app: codebox
     type: worker
 spec:
-  replicas: ${REPLICAS}
+  replicas: {{ REPLICAS }}
   selector:
     matchLabels:
-      name: codebox-worker-${LB_NUM}
+      name: codebox-worker-{{ LB_NUM }}
       app: codebox
       type: worker
   progressDeadlineSeconds: 600
@@ -22,8 +22,8 @@ spec:
   template:
     metadata:
       labels:
-        buildtime: ${BUILDTIME}
-        name: codebox-worker-${LB_NUM}
+        buildtime: {{ BUILDTIME }}
+        name: codebox-worker-{{ LB_NUM }}
         app: codebox
         type: worker
     spec:
@@ -41,13 +41,13 @@ spec:
         - name: script-storage
           hostPath:
             path: /mnt/codebox/storage
-        - name: varrun
+        - name: docker-run
           hostPath:
             path: /mnt/codebox/run
 
       containers:
         - name: codebox
-          image: ${DOCKERIMAGE}:${VERSION}
+          image: {{ DOCKERIMAGE }}:{{ VERSION }}
           command: 
             - "codebox"
             - "worker"
@@ -62,11 +62,11 @@ spec:
               containerPort: 9080
           env:
             - name: LB_ADDR
-              value: "${LB_ADDR}"
+              value: "{{ LB_ADDR }}"
             - name: SERVICE_NAME
               value: codebox-worker
             - name: DOCKER_EXTRA_HOSTS
-              value: "${DOCKER_EXTRA_HOSTS}"
+              value: "{{ DOCKER_EXTRA_HOSTS }}"
           envFrom:
             - configMapRef:
                 name: codebox
@@ -75,7 +75,8 @@ spec:
           volumeMounts:
             - name: script-storage
               mountPath: /home/codebox/storage
-            - name: varrun
+              mountPropagation: Bidirectional
+            - name: docker-run
               mountPath: /var/run
           livenessProbe:
             httpGet:
