Add entrypoint that communicates through TCP Also includes: - Process stderr on container crash - Disable container autoremove - Add RBAC to codebox lb
fixes #5, fixes #12, fixes #13, fixes #14

--- a/deploy/yaml/lb-deployment.yml.j2
+++ b/deploy/yaml/lb-deployment.yml.j2
@@ -21,6 +21,7 @@ spec:
         app: codebox
         type: lb
     spec:
+      serviceAccountName: codebox-lb
       terminationGracePeriodSeconds: 360
       imagePullSecrets:
         - name: syncano-k8s-pull-secret
