--- a/deploy/yaml/lb-internal-service.yml.j2
+++ b/deploy/yaml/lb-internal-service.yml.j2
@@ -2,6 +2,8 @@ kind: Service
 apiVersion: v1
 metadata:
   name: codebox-lb-internal-{{ LB_NUM }}
+  annotations:
+    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 spec:
   type: ClusterIP
   clusterIP: None
