--- a/deploy/yaml/worker-deployment.yml.j2
+++ b/deploy/yaml/worker-deployment.yml.j2
@@ -48,7 +48,7 @@ spec:
       containers:
         - name: codebox
           image: {{ DOCKERIMAGE }}:{{ VERSION }}
-          command: 
+          command:
             - "codebox"
             - "worker"
           securityContext:
@@ -56,7 +56,7 @@ spec:
             runAsUser: 0
           resources:
             requests:
-              cpu: 1
+              cpu: 1000m
           ports:
             - name: http-metrics
               containerPort: 9080
