--- a/deploy/yaml/lb-deployment.yml.j2
+++ b/deploy/yaml/lb-deployment.yml.j2
@@ -39,8 +39,11 @@ spec:
             runAsUser: 0
           resources:
             requests:
-              memory: "500Mi"
-              cpu: 1
+              memory: "256Mi"
+              cpu: 250m
+            limits:
+              memory: "512Mi"
+              cpu: 1000m
           ports:
             - name: grpc
               containerPort: 9000
