another fix daemonset

--- a/deploy/yaml/worker-daemonset.yml.j2
+++ b/deploy/yaml/worker-daemonset.yml.j2
@@ -8,7 +8,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      name: codebox-docker
+      app: codebox-docker
   updateStrategy:
     type: RollingUpdate
   template:
