--- a/deploy/yaml/broker-hpa.yml.j2
+++ b/deploy/yaml/broker-hpa.yml.j2
@@ -6,7 +6,7 @@ spec:
   minReplicas: {{ BROKER_MIN }}
   maxReplicas: {{ BROKER_MAX }}
   scaleTargetRef:
-    apiVersion: extensions/v1beta1
+    apiVersion: apps/v1
     kind: Deployment
     name: codebox-broker
   targetCPUUtilizationPercentage: 80
