fix: squashfuse zombie

--- a/deploy/yaml/broker-deployment.yml.j2
+++ b/deploy/yaml/broker-deployment.yml.j2
@@ -23,17 +23,17 @@ spec:
       imagePullSecrets:
         - name: syncano-k8s-pull-secret
       securityContext:
-        fsGroup: 101
+        fsGroup: 1000
       containers:
         - name: codebox-broker
           image: {{ IMAGE }}
-          command:
-            - "codebox"
-            - "broker"
+          args:
+            - codebox
+            - broker
           securityContext:
-            runAsGroup: 101
+            runAsGroup: 1000
             runAsNonRoot: true
-            runAsUser: 100
+            runAsUser: 1000
           resources:
             requests:
               memory: "64Mi"
