--- a/deploy/yaml/worker-deployment.yml.j2
+++ b/deploy/yaml/worker-deployment.yml.j2
@@ -74,7 +74,7 @@ spec:
                 name: codebox
           volumeMounts:
             - name: script-storage
-              mountPath: "{{ HOST_STORAGE_PATH }}"
+              mountPath: "{{ REPO_PATH | default('/home/codebox/storage', true) }}"
               mountPropagation: Bidirectional
             - name: docker-run
               mountPath: /var/run
