--- a/deploy/yaml/broker-hpa.yml.j2
+++ b/deploy/yaml/broker-hpa.yml.j2
@@ -1,12 +1,18 @@
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
-apiVersion: autoscaling/v1
 metadata:
   name: codebox-broker
 spec:
-  minReplicas: {{ BROKER_MIN }}
-  maxReplicas: {{ BROKER_MAX }}
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: codebox-broker
-  targetCPUUtilizationPercentage: 80
+  minReplicas: {{ BROKER_MIN }}
+  maxReplicas: {{ BROKER_MAX }}
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 80
